add nav buttons, still need to update fro dev

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="dataReady" class="row-two">
 
-  <!-- STILL NEED TO MODIFY GREETING TO TAKE USER NAME FROM LOGIN PAGE-->
+  <!-- STILL NEED TO MODIFY GREETING TO TAKE USER NAME FROM-->
   <p style="text-align:center">
     Hello (username). Have fun Converting!
   </p>
