--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!-- <div class="row-one">
     <div class="padding">Logo</div>
     <div class="padding">
@@ -23,7 +22,9 @@
 </div> -->
 
 <div class="row-one">
-    <div class="padding">Logo</div>
+    <div class="padding">
+        <img src="./assets/images/converter.png"  height=250px; width=450px;>
+    </div>
     <div class="padding">
         <a class="navbar-brand">Navigation</a>
         <!-- <ul class="navbar-nav mr-auto">
@@ -64,10 +65,3 @@
         </div>
     </div>
 </div>
-=======
- <div class="row-one image_div">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
->>>>>>> development
