added personal greeting plus header formatting

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,17 @@
-<p style="text-align:center">
-  This Conversino Calculator was Created by Team Converters (C) 2019. The Team consist of the following members:
-</p>
-<p style="text-align:center">
-  Anthony Ortega
-</p>
-<p style="text-align:center">
-  Gaby Costilla
-</p>
-<p style="text-align:center">
-  Jef Gamino
-</p>
-<p style="text-align:center">
-  Samuel Day
-</p>
-<!-- <p style="text-align:center">
-    (C) 2019
-  </p> -->
+<div class="padding">
+    <p style="text-align:center">
+        This Currency Converter application was created by Team Converts (C) 2019. The Team consist of the following members:
+      </p>
+      <p style="text-align:center">
+        Anthony Ortega
+      </p>
+      <p style="text-align:center">
+        Gaby Costilla
+      </p>
+      <p style="text-align:center">
+        Jef Gamino
+      </p>
+      <p style="text-align:center">
+        Samuel Day
+      </p>
+</div>
