--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="dataReady" class="row-two">
 
-  <!-- STILL NEED TO MODIFY GREETING TO TAKE USER NAME FROM-->
+  <!-- PERSONALIZED GREETING-->
   <p style="text-align:center">
-    Hello (username). Have fun Converting!
+    Hello {{username}}. Have fun Converting!
   </p>
 
   <div class="conversion-box">
