--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,27 @@
 <div class="login-grid">
-<!-- <div class="space"></div> -->
 
-<p style="text-align:center">
-  Welcome to Team Converter's Conversion Calculator! Please fill in your info below:
-</p>
-<div>
-</div>
-<form class="login-form box-shadow">
-  <div class="form-group">
-
-  <!-- STILL NEED TO TAKE INPUTED USER NAME AND CREATE A CUSTIMIZED GREETING IN THE NAVIGATION MENU/HEADER COMPONENT -->
-
-    <label for="exampleInputEmail1">User Name</label>
-    <input [(ngModel)]="username" name="username" type="text" class="form-control" id="exampleInputEmail1"
-      aria-describedby="emailHelp" placeholder="Input Name">
+  <p style="text-align:center">
+    Welcome to Team Converter's Currency Converter! Please fill in your info below:
+  </p>
+  <div>
   </div>
+  <form class="login-form box-shadow">
+    <div class="form-group">
 
-  <!-- STILL NEED TO WIRE UP DEFAULT COUNTRY CHOICE TO MATCH DROP-DOWN MENU OF BASE CURRENCIES -->
-
-  <div class="form-group">
-    <label for="exampleInputPassword1">Default Country</label>
-   
-  
-  
+      <label for="exampleInputEmail1">User Name</label>
+      <input [(ngModel)]="username" name="username" type="text" class="form-control" id="exampleInputEmail1"
+        aria-describedby="emailHelp" placeholder="Input Name">
     </div>
-  <div class="btn-group" dropdown>
+
+    <!-- STILL NEED TO WIRE UP DEFAULT COUNTRY CHOICE TO MATCH DROP-DOWN MENU OF BASE CURRENCIES -->
+
+    <div class="form-group">
+      <label for="exampleInputPassword1">Default Country (USD)</label>
+
+
+
+    </div>
+    <!-- <div class="btn-group" dropdown>
       <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
         aria-controls="dropdown-basic">
         {{this.mainframe.currentCountry.base}}<span class="caret"></span>
@@ -33,11 +30,11 @@
         <li (click)="setCountry(currency, resultLeft.value)" *ngFor="let currency of currencies; let i = index"
           role="menuitem"><a [ngStyle]="fontFamily" class="dropdown-item" href="#">{{currency.base}}</a></li>
       </ul>
-    </div>
+    </div> -->
 
-  <!-- <button mat-raised-button (click)="navigateTo('home')" type="button" class="btn btn-success">
-      Login</button> -->
-      
-</form>
-<div></div>
+    <button mat-raised-button (click)="login()" type="button" class="btn btn-success">
+      Login</button>
+
+  </form>
+  <div></div>
 </div>
