--- a/src/styles.css
+++ b/src/styles.css
@@ -12,14 +12,16 @@ body {
     overflow: hidden;
 }
 
-/* .main-page {
+.main-page {
     display: grid;
     grid-template-rows: 3fr 10fr 8fr;
     height: 100%;
-} */
+}
+
+/* SAMUEL DAY: adjusted .row-one grid-tempalte-columns sizes to better fit the backgroud picture in the middle */
 .row-one {
     display: grid;
-    grid-template-columns: 4fr 10fr 4fr;
+    grid-template-columns: 2fr 10fr 2fr;
     width: 100vw;
     height: 100%;
     /* border: black 2px solid; */
