--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -5,21 +5,7 @@
 .space {
     margin-bottom: 15px;
 }
-/* *{
-    margin: 0px;
-    padding: 0px;
-    position: relative;
-}
 
-.columnTwo{
-    
-background-image: url('../../assets/images/converter.png');
+.backimg {
+    background-size: 100% 100%;
 }
-
-.img {
-    justify-content: center;
-    width:auto;
-    height:auto;
-}
-  */
-
