adjusted look/css of about/login pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,23 @@
-<p style="text-align:center">
-  This Conversino Calculator was Created by Team Converters (C) 2019. The Team consist of the following members:
-</p>
-<p style="text-align:center">
-  Anthony Ortega
-</p>
-<p style="text-align:center">
-  Gaby Costilla
-</p>
-<p style="text-align:center">
-  Jef Gamino
-</p>
-<p style="text-align:center">
-  Samuel Day
-</p>
+<ul class="sizing" style="list-style: none">
+  <li>
+    <p class="inc-size">
+      This Conversion Calculator was Created by Team Converters (C) 2019. The Team consist of the following members:
+    </p>
+    <p class="inc-size">
+      Anthony Ortega
+    </p>
+    <p class="inc-size">
+      Gaby Costilla
+    </p>
+    <p class="inc-size">
+      Jef Gamino
+    </p>
+    <p class="inc-size">
+      Samuel Day
+    </p>
+
+  </li>
+</ul>
 <!-- <p style="text-align:center">
     (C) 2019
   </p> -->
