--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,7 +1,7 @@
 <div class="row-three">
     <div>
         <div class="center-height fill">
-            <div>
+            <div style="text-align:center">
                 <button mat-raised-button (click)=saveConversion() type="button" class="btn-sm btn-success">Save Conversion
                 </button>
             </div>
@@ -13,18 +13,16 @@
     </div>
     <div class="arrayBox">
         <table class="table-grid" *ngIf="mainframe.history.length > 0">
-            <tbody style="font-family:Arial;font-size: 8pt">
+            <tbody style="font-family:Arial;font-size: 12pt">
                 <tr *ngFor="let detail of mainframe.history; let i = index">
                     <td>{{detail.countryLeft}}</td>
-                    <!-- <td>{{detail.denominationLeft}}</td>
-                    <td>{{detail.symbolLeft}}</td> -->
+                    <td>{{detail.symbolLeft}}</td>
                     <td *ngIf="detail.editMode">
                         <input [(ngModel)]="detail.conversionLeft" type="string" class="form-control" placeholder="input"></td>
                     <td *ngIf="!detail.editMode">{{detail.conversionLeft}}</td>
                     <td>=</td>
                     <td>{{detail.countryRight}}</td>
-                    <!-- <td>{{detail.denominationRight}}</td>
-                    <td>{{detail.symbolRight}}</td> -->
+                    <td>{{detail.symbolRight}}</td>
                     <td>{{detail.conversionRight}}</td>
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
@@ -40,23 +38,21 @@
     </div>
     <div class="arrayBox footerColumnTwo">
         <div class="no-items" *ngIf="mainframe.history.length === 0">
-            <h6>No history has been saved</h6>
+            <h4>No history has been saved</h4>
         </div>
         <table class="table-grid" *ngIf="mainframe.history.length > 0">
             <thead>
             </thead>
-            <tbody style="font-family:Arial;font-size: 8pt">
+            <tbody style="font-family:Arial;font-size: 12pt">
                 <tr *ngFor="let detail of mainframe.historyOverflow; let i = index">
                     <td>{{detail.countryLeft}}</td>
-                    <!-- <td>{{detail.denominationLeft}}</td>
-                    <td>{{detail.symbolLeft}}</td> -->
+                    <td>{{detail.symbolLeft}}</td>
                     <td *ngIf="detail.editMode">
                         <input class="input-style" [(ngModel)]="detail.conversionLeft" type="number" class="form-control" placeholder="input"></td>
                     <td *ngIf="!detail.editMode">{{detail.conversionLeft}}</td>
                     <td>=</td>
                     <td>{{detail.countryRight}}</td>
-                    <!-- <td>{{detail.denominationRight}}</td>
-                    <td>{{detail.symbolRight}}</td> -->
+                    <td>{{detail.symbolRight}}</td>
                     <td>{{detail.conversionRight}}</td>
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
@@ -74,18 +70,16 @@
         <table class="table-grid" *ngIf="mainframe.history.length > 0">
             <thead>
             </thead>
-            <tbody style="font-family:Arial;font-size: 8pt">
+            <tbody style="font-family:Arial;font-size: 12pt">
                 <tr *ngFor="let detail of mainframe.historyOverflowTwo; let i = index">
                     <td>{{detail.countryLeft}}</td>
-                    <!-- <td>{{detail.denominationLeft}}</td>
-                        <td>{{detail.symbolLeft}}</td> -->
+                        <td>{{detail.symbolLeft}}</td>
                     <td *ngIf="detail.editMode">
                         <input [(ngModel)]="detail.conversionLeft" type="number" class="form-control" placeholder="input"></td>
                     <td *ngIf="!detail.editMode">{{detail.conversionLeft}}</td>
                     <td>=</td>
                     <td>{{detail.countryRight}}</td>
-                    <!-- <td>{{detail.denominationRight}}</td>
-                        <td>{{detail.symbolRight}}</td> -->
+                        <td>{{detail.symbolRight}}</td>
                     <td>{{detail.conversionRight}}</td>
                     <td>
                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example" style="font-family:Arial;font-size: 8pt">
@@ -117,7 +111,7 @@
     <div>
             <div class="center-height fill">
                 <div>
-                    <button mat-raised-button (click)=randomCurrency() type="button" class="btn-sm btn-success">Random Currency Generator
+                    <button mat-raised-button (click)=randomCurrency() type="button" class="btn-sm btn-success vertical-center">Random Currency Generator
                     </button>
                 </div>
                 
