--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .pull-right {
-    float: right;
+    float: center;
 }
 
 .main-page {
@@ -26,6 +26,10 @@ body {
     grid-template-columns: 4fr 10fr 4fr;
     width: 100vw;
     height: 100%;
+    background-image:url("./assets/images/converter.png");
+    background-repeat:no-repeat;
+    background-size: contain;
+    max-height: 100%;
     
     /* border: black 2px solid; */
 }
@@ -54,16 +58,17 @@ body {
 .padding{
     padding: 12px;
     margin:5px;
-    border: black 1px solid;
+    /* border: black 1px solid; */
     height: 100%;
     width: 100%;
 }
 
 .image_div{
-    background-image:url("./assets/images/converter.png");
-    width:100%;
-    background-repeat:no-repeat;
-    background-size:cover;
+
+    /* background-size:cover; */
+    /* max-width: 100%;
+    max-height: 100%;
+    justify-content: center; */
 }
 
 .conversion-box {
@@ -127,4 +132,30 @@ body {
 .large-line-break{
     width:100%;
     height: 5px;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(50%);
+}
+
+.vertical-center-header{
+    margin: 0;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.vertical-center-r1c1{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.pull-right {
+    float:right;
 }
