--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -9,6 +9,10 @@
                 <button mat-raised-button (click)=clearHistory() type="button" class="btn-sm btn-danger">Clear History
                 </button>
             </div>
+            <div style="text-align:center">
+                <button mat-raised-button (click)=mainframe.restoreHistory() type="button" class="btn-sm btn-warning">Restore History
+                </button>
+            </div>
         </div>
     </div>
     <div class="arrayBox">
